Create new assets and reuse post layouts

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "jankx/template": "dev-master"
+        "jankx/template": "dev-master",
+        "jankx/post-layout": "dev-master"
     },
     "autoload": {
         "psr-4": {
